--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
 	<div class="main_container">
 		<h1 class="main_time">∞:∞:∞</h1>
-		<p class="subtitle-p">timmar, minuter och sekunders lektionstid kvar innan...</p>
+		<p class="subtitle-p">timmar, minuter och sekunders lektionstid<span class="asterisk">*</span> kvar innan...</p>
 		<p class="subtitle-p">...</p>
 		<p class="subtitle-p">Sommarens Lov</p>
 	</div>
 	<div class="hover-c hover-c1"><img class="lars1" src="lars1.png"></div>
 	<div class="hover-c hover-c2"><img class="lars1" src="lars1.png"></div>
 	<script tyep="module" src="index.js"></script>
+	<span class="asterisk-note">*Bortsett från Ma2c Lektioner</span>
 </body>
 </html>
